--- a/frontend/src/styles/custom/_common.scss
+++ b/frontend/src/styles/custom/_common.scss
@@ -21,3 +21,10 @@
 .font-size-14px {
   font-size: 14px;
 }
+
+.loading-spinner {
+  position: fixed;
+  background-color: rgba(0,0,0,.5);
+  z-index: 1234;
+  width: 100%;
+}
