--- a/frontend/src/styles/custom/_common.scss
+++ b/frontend/src/styles/custom/_common.scss
@@ -28,3 +28,20 @@
   z-index: 1234;
   width: 100%;
 }
+
+.w-sm {
+  width: 100px;
+}
+.w-md {
+  width: 200px;
+}
+.w-lg {
+  width: 400px;
+}
+.w-xlg {
+  width: 600px;
+}
+
+.fr-1 {
+  flex: 1;
+}
